--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-Package          Version
----------------- -------
-Django           2.1.7  
-django-authtools 1.6.0  
-Pillow           5.4.1  
-pip              19.0.3 
-psycopg2         2.7.7  
-pytz             2018.9 
-setuptools       40.8.0 
-wheel            0.33.1 
+Django==2.1.7  
+django-authtools==1.6.0  
+Pillow==5.4.1  
+pip==19.0.3 
+psycopg2==2.7.7  
+pytz==2018.9 
+setuptools==40.8.0 
+wheel==0.33.1
+whitenoise == 4.1.2
+dj-database-url == 0.5.0
+django-heroku == 0.3.1
